--- a/community_algorithm/gnnsdata.ipynb
+++ b/community_algorithm/gnnsdata.ipynb
@@ -2,11 +2,12 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import networkx as nx"
       ]
     },
     {
@@ -96,6 +97,38 @@
         "    f.write(f\" {i[0]} {i[1]} 1.000000000000000\\n\")\n",
         "\n",
         "f.close()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "50\n",
+            "50\n"
+          ]
+        }
+      ],
+      "source": [
+        "nodes = []\n",
+        "edges = []\n",
+        "for count, (x, y) in enumerate(zip(df1['from'], df1['to'])):\n",
+        "    if(count == 50): break\n",
+        "    nodes.append(x)\n",
+        "    nodes.append(y)\n",
+        "    temp_tup = (x, y)\n",
+        "    edges.append(temp_tup)\n",
+        "nodes = set(nodes)\n",
+        "G1 = nx.Graph()\n",
+        "G1.add_nodes_from(nodes)\n",
+        "G1.add_edges_from(edges)\n",
+        "print(len(nodes))\n",
+        "print(len(edges))\n",
+        "nx.write_gexf(G1, \"de50.gexf\")"
       ]
     },
     {
