fixed missing comma

--- a/GNNS.ipynb
+++ b/GNNS.ipynb
@@ -32,16 +32,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tuiRqBvbv9Ik"
+      },
+      "outputs": [],
       "source": [
         "# import pandas as pd\n",
         "# data = pd.read_csv('./Colab Notebooks/musae_ENGB_edges.csv')\n",
         "# print(data.head())"
-      ],
-      "metadata": {
-        "id": "tuiRqBvbv9Ik"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -55,8 +55,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "fatal: destination path 'GNNS' already exists and is not an empty directory.\n"
           ]
@@ -78,8 +78,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: pycombo in /usr/local/lib/python3.8/dist-packages (0.1.7)\n",
@@ -147,13 +147,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "import os\n",
-        "os.chdir(r\"/content/drive/My Drive\")\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -161,15 +155,21 @@
         "id": "zNcBYSybv5CP",
         "outputId": "9d6e1099-138c-473a-d1b3-6cfe0f9f438f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "import os\n",
+        "os.chdir(r\"/content/drive/My Drive\")\n"
       ]
     },
     {
@@ -208,8 +208,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Tensor: tensor([1., 2., 3., 4.])\n",
             "Tensor device: cpu\n",
@@ -1048,8 +1048,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Network & louvain_ig_mod & GNN100_mod & GNN2500_mod & louvain_ig_time & GNN100_time & GNN2500_time\n",
             "edges_pajek_large.net\n",
@@ -1100,7 +1100,7 @@
         "        \"es.net\",\n",
         "        \"fr.net\",\n",
         "        \"ptbr.net\",\n",
-        "        \"ru.net\"\n",
+        "        \"ru.net\",\n",
         "        \"large.net\"\n",
         "    ]\n",
         "    return network_file_names\n",
@@ -1144,16 +1144,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "c1b0kj_6NNzb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "c1b0kj_6NNzb",
         "outputId": "6e0c95da-82b8-4f1d-fee5-b83172fefbe4"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Network & louvain_ig_mod & GNN100_mod & GNN2500_mod & louvain_ig_time & GNN100_time & GNN2500_time\n",
             "edges_pajek_large.net\n",
@@ -1208,11 +1208,9 @@
     "colab": {
       "provenance": []
     },
-    "interpreter": {
-      "hash": "aa8c9e988bba47ec3e791b22c0bbb49eb66a938b6cde8fffd564472f09fd563a"
-    },
+    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.8.10 ('.venv')",
+      "display_name": "Python 3.8.11 ('Tensorflow')",
       "language": "python",
       "name": "python3"
     },
@@ -1226,9 +1224,13 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.11"
     },
-    "gpuClass": "standard"
+    "vscode": {
+      "interpreter": {
+        "hash": "9c2de701283e35bd4ebf557d6f0980a64018440651b26aa038bf25fa06e6b7f1"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
